Fixed a bug causing the images to overlap the input bar

--- a/src/components/imageLinkForm/ImageLinkForm.css
+++ b/src/components/imageLinkForm/ImageLinkForm.css
@@ -1,7 +1,7 @@
 .form {
     width: 700px;
     background-size: 40px 60px;
-        position: absolute;
+        position: relative;
         box-shadow: 0 0 0 3px #149df2 inset;
         display: -webkit-box;
         display: -ms-flexbox;
